[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/base.tres" type="Theme" id=1]
[ext_resource path="res://start.gd" type="Script" id=2]
[ext_resource path="res://assets/Poppins-Medium.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 21
outline_color = Color( 0.184314, 0.109804, 0.109804, 1 )
font_data = ExtResource( 3 )

[node name="Start" type="Node2D"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.564706, 0.839216, 1, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect"]
anchor_right = 1.0
margin_top = 30.0
margin_bottom = 4681.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartHeader" type="Label" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 31.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "Delivery Guys"
align = 1
valign = 1

[node name="StartExpl" type="Label" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 469.0
size_flags_vertical = 1
theme = ExtResource( 1 )
text = "Two friends, who work for the same cargo company bet on this: \"Who delivers the most shipment in a single day?\"

Each worker in this company starts his/her day with a truck. Each truck is given 9 districts.

       District/Packages
A			 1
B			 2
C 			3
D 			4
E 			5
F 			6
G 			7
H 			8
I 			9

The ambition is to deliver the most number of packages in a single day."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -126.5
margin_top = -80.0
margin_right = 126.5
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LanguageSelect" type="Button" parent="MarginContainer/Control/HBoxContainer"]
margin_top = 4.0
margin_right = 145.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "Select language"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rules" type="Button" parent="MarginContainer/Control/HBoxContainer"]
margin_left = 149.0
margin_top = 4.0
margin_right = 204.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "Rules"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="MarginContainer/Control/HBoxContainer"]
margin_left = 208.0
margin_top = 4.0
margin_right = 253.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/Control/HBoxContainer/LanguageSelect" to="." method="_on_LanguageSelect_pressed"]
[connection signal="pressed" from="MarginContainer/Control/HBoxContainer/Rules" to="." method="_on_Rules_pressed"]
[connection signal="pressed" from="MarginContainer/Control/HBoxContainer/Play" to="." method="_on_Play_pressed"]
